fix: adjust mobile shortcut top position to prevent header overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1705,7 +1705,7 @@
             .homework-shortcut-left {
                 display: block !important;
                 left: 10px;
-                top: 90px;
+                top: 160px;
             }
             .hw-btn-left {
                 width: 75px;
